Update font families and font sizes

--- a/khyeras/_dev/styles/khyeras_v1/template/overall_footer.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/overall_footer.html
@@ -16,7 +16,8 @@
 								</a>
 							</p>
 							<p class="copyright">
-								&copy; 2017 Khy'eras RPG<span class="bullet">&bull;</span>Content and layout design by Adria/Memoria<br />
+								&copy; 2017 Khy'eras RPG<br />
+								Content and layout design by Adria/Memoria<br />
 								<!-- EVENT overall_footer_copyright_prepend -->
 								{CREDIT_LINE}
 								<!-- IF TRANSLATION_INFO --><br />{TRANSLATION_INFO}<!-- ENDIF -->
@@ -80,12 +81,12 @@
 						<div class="flex-column">
 							<p class="bottom-line">
 								<!-- EVENT overall_footer_timezone_before -->
-								<i class="icon fa-clock-o fa-fw" aria-hidden="true"></i>{S_TIMEZONE}
+								<i class="icon fa-clock-o fa-fw" aria-hidden="true"></i> {S_TIMEZONE}
 								<!-- EVENT overall_footer_timezone_after -->
 								<span class="bullet">&bull;</span>	
 								<!-- IF not S_IS_BOT -->
 									<a href="{U_DELETE_COOKIES}">
-										<i class="icon fa-trash fa-fw" aria-hidden="true"></i>{L_DELETE_COOKIES}
+										<i class="icon fa-trash fa-fw" aria-hidden="true"></i> {L_DELETE_COOKIES}
 									</a>
 								<!-- ENDIF -->										
 							</p>
