--- a/khyeras/_dev/styles/khyeras_v1/template/overall_header.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/overall_header.html
@@ -72,7 +72,7 @@
 
 	<!--[if lte IE 9]>
 		<p class="browserupgrade">
-			You are using an <strong>outdated</strong> browser. Please <a href="//browsehappy.com/" target="_blank">upgrade your browser</a> to improve your experience.
+			You are using an <strong>outdated</strong> browser. Please <a href="//browsehappy.com/" target="_blank"><strong>upgrade your browser</strong></a> to improve your experience.
 		</p>
 	<![endif]-->
 
@@ -97,8 +97,10 @@
 					</div>
 					<div class="header-divider"></div>
 					<div id="site-quotes" class="site-quotes">
-						<p><span class="quote-left">"</span>She smirked then as she looked at Kyrian once more. Babysit indeed! She'd take the boy to Siren's Corner first chance she got! HA!<span class="quote-right">"</span></p>
-						<p class="quote-author">- Deanna DiCorvino</p>
+						<p><span class="quote-left">&ldquo;</span>She smirked then as she looked at Kyrian once more. Babysit indeed! She'd take the boy to Siren's Corner first chance she got! HA!<span class="quote-right">&rdquo;</span></p>
+						<p class="quote-author">
+							<em>- Deanna DiCorvino</em>
+						</p>
 					</div>
 				</div>
 				<div class="header-overlay"></div>
