--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_forums-topics.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_forums-topics.scss
@@ -42,11 +42,12 @@
 			.row-item {
 				background: $color-04;
 				padding: 10px;
+				align-items: center;
 				dt {
 					a {
 						font-family: $font-02;
 						font-variant: small-caps;
-//						font-size: rem(20px);
+						font-size: rem(22px);
 						color: $color-01;
 						&:hover {
 							color: $color-06;
