--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_footer.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_footer.scss
@@ -9,7 +9,7 @@
 		padding: 0 0 30px 0;
 		.flex-row .flex-column {
 			.copyright, .bottom-line {
-				//font-size: rem(14px);
+				font-size: rem(13px);
 			}
 			.bottom-line {
 				text-align: center;
