--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_header.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_header.scss
@@ -34,7 +34,6 @@
 				font-family: $font-03;
 				font-size: rem(100px);
 				font-variant: none;
-				line-height: 1;
 				text-shadow: 3px 2px 0 rgba($color-02, 0.65);
 				a:hover {
 					color: $color-01;
@@ -42,20 +41,23 @@
 			}
 			h3 {
 				font-family: $font-02;  
-//				font-size: rem(33px);
-				text-shadow: 2px 1px 0 rgba($color-02, 0.65), 2px 1px 5px rgba($color-02, 0.85);
+				font-size: rem(30px);
+				text-shadow: 2px 1px 0 rgba($color-02, 0.65), 2px 1px 5px rgba($color-02, 0.75);
 				letter-spacing: 2px;
 			}		
 		}
 		.site-quotes {
 			font-family: $font-02;
-			text-shadow: 1px 1px 0 rgba($color-02, 0.65), 1px 1px 5px rgba($color-02, 0.85);
-//			font-size: rem(15px);
+			font-weight: 500;
+			text-shadow: 1px 1px 0 rgba($color-02, 0.65), 1px 1px 5px rgba($color-02, 0.75);
+			font-size: rem(15px);
 			span {
-//				font-size: rem(40px);
+				font-size: rem(30px);
 				@include inline-block(middle);
 				@include sizing(12px, 12px);
-				line-height: 24px;
+				line-height: 1.2;
+				position: relative;
+				top: -5px;
 				&.quote-left {
 					margin: 0 10px 0 0;
 				}
@@ -64,8 +66,7 @@
 				}
 			}
 			.quote-author {
-				text-align: right;
-				font-style: italic;			
+				text-align: right;		
 				margin: -10px 0 0 0;	
 			}
 		}
@@ -105,7 +106,7 @@
 		& > li {	
 			@include inline-block(middle);
 			& > a {
-				padding: 10px 20px;
+				padding: 12px 20px;
 				display: block;
 				color: $color-01;
 			}
@@ -126,7 +127,7 @@
 				color: $color-06;
 			}
 			&.dropdown-container > a {
-				padding: 10px 40px 10px 20px;
+				padding: 12px 40px 12px 20px;
 			}
 			&.dropdown-visible > .icon {
 				transform: rotate(180deg);
@@ -137,6 +138,9 @@
 				border: 1px solid $color-03;
 				border-top: 0;
 				border-radius: 0;
+				.dropdown-contents {
+					font-size: rem(14px);
+				}
 			}
 			&.dropdown-left .dropdown {
 				left: 0;
