--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_layout.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_layout.scss
@@ -45,10 +45,8 @@
 	padding: 20px;
 	color: $color-08;
 	text-align: center;
-//	font-size: rem(18px);
 	a {
 		color: $color-07;
-		font-weight: bold;
 		&:hover {
 			color: $color-08;
 		}
@@ -88,9 +86,7 @@
 			overflow-y: auto;
 			overflow-x: hidden;
 			padding: 0 20px 0 0;
-			&, .icon {
-//				font-size: rem(15px);
-			}
+			font-size: rem(13px);
 			a {
 				color: $color-01;
 				&:hover {
@@ -159,7 +155,7 @@
 				margin: 0 5px 0 0;
 			}
 			.fa-chevron-right {
-//				font-size: rem(12px);
+				font-size: rem(13px);
 			}
 		}
 	}
@@ -182,12 +178,12 @@
 ========================================================================== */
 
 #page-welcome {
-//	font-size: rem(15px);
+	font-size: rem(13px);
 	.introduction {
 		p:first-child:first-line {
 			font-family: $font-02;
 			font-variant: small-caps;
-//			font-size: rem(18px);
+			font-size: rem(20px);
 			line-height: 1.3;
 		}
 	}
@@ -227,6 +223,7 @@
 				& > a {
 					display: block;
 					margin: 0 2.5px 5px 2.5px;
+					padding: 10px;
 				}				
 			}																														
 		}
@@ -242,6 +239,7 @@
 	border-radius: 3px;
 	text-align: center;
 	font-weight: normal;
+	font-size: rem(12px);
 	display: inline-block;
 	text-shadow: none;
 	padding: 0 5px;
@@ -264,7 +262,7 @@
 	.header {
 		font-family: $font-02;
 		font-variant: small-caps;
-//		font-size: rem(20px);
+		font-size: rem(18px);
 		background: $color-04;
 		padding: 0 150px 0 10px;
 		height: 40px;
@@ -281,7 +279,7 @@
 			top: 0;			
 			font-family: $font-01;
 			font-variant: none;
-//			font-size: rem(14px);
+			font-size: rem(13px);
 		}
 	}
 	ul {
@@ -290,7 +288,7 @@
 			position: relative;
 			padding: 0 0 10px 0;
 			margin: 0 0 10px 0;
-			border-bottom: 1px solid $color-03;
+			border-bottom: 1px solid $color-03;			
 			.notification-block {
 				@include flex-flow(row nowrap);				
 				img {
@@ -310,7 +308,6 @@
 					}
 					.notification-time {
 						text-align: right;
-//						font-size: rem(13px);
 					}
 				}
 			}
@@ -321,10 +318,7 @@
 				right: 2px;
 				z-index: 2;
 				color: $color-06;
-				text-align: center;		
-				.icon {
-//					font-size: rem(16px);
-				}
+				text-align: center;
 			}
 			&:hover .icon-mark {
 				display: block;
