--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_header.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_header.scss
@@ -48,9 +48,14 @@
 		}
 		.site-quotes {
 			font-family: $font-02;
-			font-weight: 500;
 			text-shadow: 1px 1px 0 rgba($color-02, 0.65), 1px 1px 5px rgba($color-02, 0.75);
-			font-size: rem(15px);
+			font-size: rem(14px);
+			p {
+				margin: 0 0 10px 0;
+				&:last-child {
+					margin: 0;
+				}
+			}
 			span {
 				font-size: rem(30px);
 				@include inline-block(middle);
@@ -67,13 +72,12 @@
 			}
 			.quote-author {
 				text-align: right;		
-				margin: -10px 0 0 0;	
 			}
 		}
 		.header-divider {
 			background: $color-01;
 			flex: 0 0 1px;
-			height: 20%;
+			height: 40%;
 			margin: 0 40px;
 			box-shadow: 1px 1px 0 0 rgba($color-02, 0.30);
 		}		
