--- a/khyeras/styles/khyeras_v1/template/overall_header.html
+++ b/khyeras/styles/khyeras_v1/template/overall_header.html
@@ -97,9 +97,10 @@
 					</div>
 					<div class="header-divider"></div>
 					<div id="site-quotes" class="site-quotes">
-						<p><span class="quote-left">&ldquo;</span>She smirked then as she looked at Kyrian once more. Babysit indeed! She'd take the boy to Siren's Corner first chance she got! HA!<span class="quote-right">&rdquo;</span></p>
+						<p><span class="quote-left">&ldquo;</span>Six, you'll need to step back a bit. I need room to do this.<span class="quote-right">&rdquo;</span></p>
+						<p><span class="quote-left">&ldquo;</span>I was only half telling the truth. I would need room, but I just wasn't comfortable having an angry, naked demon looming that close to me while I was on the floor. Go figure.<span class="quote-right">&rdquo;</span></p>
 						<p class="quote-author">
-							<em>- Deanna DiCorvino</em>
+							<em>- Victor Sage</em>
 						</p>
 					</div>
 				</div>
@@ -255,6 +256,48 @@
 							<!-- ENDIF -->
 						</div>
 					</div>					
+				</div>
+			</div>
+		</section>
+
+		<section id="featured-content" class="featured-content">
+			<div class="wrapper">
+				<div class="inner">
+					<div class="flex-row flex-row-10">
+						<div class="flex-column featured-title"><h5>Featured</h5></div>				
+						<div class="flex-column featured-mvp">
+							<a href="//google.com">
+								<div class="image-wrap">
+									<img src="{T_THEME_PATH}/images/featured-mvp.jpg" alt="MVP" />
+								</div>
+								<p>MVP: Deanna DiCorvino</p>
+							</a>
+						</div>	
+						<div class="flex-column featured-story">
+							<a href="//google.com">
+								<div class="image-wrap">
+									<img src="{T_THEME_PATH}/images/featured-story.jpg" alt="Story" />
+								</div>
+								<p>Story: Best Thread Ever</p>
+							</a>
+						</div>	
+						<div class="flex-column featured-lore">
+							<a href="//google.com">
+								<div class="image-wrap">
+									<img src="{T_THEME_PATH}/images/featured-lore.jpg" alt="Lore" />
+								</div>
+								<p>Lore: Dragons</p>
+							</a>
+						</div>	
+						<div class="flex-column featured-event">
+							<a href="//google.com">
+								<div class="image-wrap">
+									<img src="{T_THEME_PATH}/images/featured-event.jpg" alt="Event" />
+								</div>
+								<p>Event: It's An Event</p>
+							</a>
+						</div>	
+					</div>
 				</div>
 			</div>
 		</section>
