--- a/themusescircle/dev/themes/musescircle/assets/scss/_normalize.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_normalize.scss
@@ -57,9 +57,9 @@ abbr[title] {
 	border-bottom: 1px dotted;
 }
 
-// b, strong {
-// 	font-weight: bold;
-// }
+b, strong {
+	font-weight: bold;
+}
 
 dfn {
 	font-style: italic;
