--- a/khyeras/styles/khyeras_v1/template/overall_header.html
+++ b/khyeras/styles/khyeras_v1/template/overall_header.html
@@ -162,7 +162,7 @@
 										<!-- IF CURRENT_USER_AVATAR -->
 											{CURRENT_USER_AVATAR}
 										<!-- ELSE -->
-											<img src="//via.placeholder.com/200x200" alt="" />
+											<img src="{T_THEME_PATH}/images/no_avatar.gif" alt="Default Avatar" />
 										<!-- ENDIF -->
 									</div>
 								</div>							
@@ -259,7 +259,7 @@
 				</div>
 			</div>
 		</section>
-
+		
 		<section id="featured-content" class="featured-content">
 			<div class="wrapper">
 				<div class="inner">
