Action bar, pagination, jumpbox, and misc styles added

--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_form-fields.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_form-fields.scss
@@ -71,9 +71,6 @@ label {
 		position: absolute;
 		top: 0;
 		z-index: 2;
-		&:hover {
-			background: $color-03;
-		}
 	}
 	button {
 		right: 65px;
@@ -81,4 +78,8 @@ label {
 	a.button {
 		right: 0;
 	}	
+}
+
+.search-box.dropdown .button:hover {
+	background: $color-03;
 }
