--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_header.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_header.scss
@@ -168,6 +168,7 @@
 
 #page-welcome {
 	font-size: rem(13px);
+	margin: 0 0 30px 0;
 	.introduction {
 		p:first-child:first-line {
 			font-family: $font-02;
@@ -321,51 +322,54 @@
 /* Featured Content
 ========================================================================== */
 
-#featured-content .flex-row {
-	align-items: center;
-	.flex-column {
-		position: relative;
-		margin: 0 0 20px 0;
-		h5, p {
-			margin: 0;
-		}
-		&.featured-title {
-			flex: 0 0 150px;
-		}
-		a {
-			display: block;
-			border: 5px solid $color-04;
-			color: $color-01;				
-			&:hover {
-				color: $color-07;
-				img {
-					transform: scale(1.2,1.2);
-				}
-			}				
-		}
-		.image-wrap {				
-			@include sizing(100%, 0);
-			overflow: hidden;
-			padding: 0 0 55% 0;
+#featured-content {
+	margin: 0 0 30px 0;
+	.flex-row {
+		align-items: center;
+		.flex-column {
 			position: relative;
-			img {
-				margin: -25px 0 0 0;
-				@include transition(transform 0.5s ease-in-out);
+			margin: 0 0 20px 0;
+			h5, p {
+				margin: 0;
 			}
-		}
-		p {
-			position: absolute;
-			left: 15px;
-			right: 15px;				
-			bottom: 5px;
-			padding: 0 10px;
-			height: 30px;
-			line-height: 30px;
-			overflow: hidden;
-			text-overflow: ellipsis;
-			white-space: nowrap;
-			background: rgba($color-02, 0.65);
-			text-align: center;
+			&.featured-title {
+				flex: 0 0 150px;
+			}
+			a {
+				display: block;
+				border: 5px solid $color-04;
+				color: $color-01;				
+				&:hover {
+					color: $color-07;
+					img {
+						transform: scale(1.2,1.2);
+					}
+				}				
+			}
+			.image-wrap {				
+				@include sizing(100%, 0);
+				overflow: hidden;
+				padding: 0 0 55% 0;
+				position: relative;
+				img {
+					margin: -25px 0 0 0;
+					@include transition(transform 0.5s ease-in-out);
+				}
+			}
+			p {
+				position: absolute;
+				left: 15px;
+				right: 15px;				
+				bottom: 5px;
+				padding: 0 10px;
+				height: 30px;
+				line-height: 30px;
+				overflow: hidden;
+				text-overflow: ellipsis;
+				white-space: nowrap;
+				background: rgba($color-02, 0.65);
+				text-align: center;
+			}
 		}
 	}
 }
