--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_base.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_base.scss
@@ -26,11 +26,11 @@ img {
 	display: block;
 }
 
-h1, h2, h3, h4, h5, h6, p, figure, pre, code {
+h1, h2, h3, h4, h5, h6, p, figure, pre, code, dl {
     margin: 0 0 20px 0;
 }
 
-ul, ol, dl {
+ul, ol {
 	padding: 0;
 	margin: 0 0 20px 40px;
 }
