--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_layout.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_layout.scss
@@ -164,13 +164,31 @@
 /* Main Boxes (Inner)
 ========================================================================== */
 
-#page-welcome, #featured-content, .forabg, .forumbg, .panel {
+#page-welcome, #featured-content, .forabg, .forumbg, .panel, .post {
 	.inner {
 		padding: 20px 20px 0 20px;
 		background: rgba($color-02, 0.20);
 		border: 1px solid $color-04;
 		box-shadow: 3px 3px 6px rgba($color-02, 0.30);
 	}
+}
+
+#page-welcome, #featured-content, .forabg, .panel {
+	.inner {
+		margin: 0 0 30px 0;
+	}
+}
+
+.forumbg .inner {
+	margin: 0 0 10px 0;
+}
+
+.panel .inner .inner {
+	padding: 0;
+	background: none;
+	border: 0;
+	box-shadow: none;
+	margin: 0;
 }
 
 /* Pagination
@@ -258,23 +276,21 @@
 /* Sort Tools
 ========================================================================== */
 
-.sort-tools .dropdown {
-	.display-options {
-		label {
-			position: relative;
-			padding: 8px 130px 8px 0;
-			margin: 0 0 10px 0;
-			select {
-				position: absolute;
-				top: 0;
-				right: 0;
-				width: 120px;
-				margin: 0;
-			}
+.sort-tools .dropdown .display-options {
+	label {
+		position: relative;
+		padding: 8px 130px 8px 0;
+		margin: 0 0 10px 0;
+		select {
+			position: absolute;
+			top: 0;
+			right: 0;
+			width: 120px;
+			margin: 0;
 		}
-		.button2 {
-			width: 100%;
-		}
+	}
+	.button2 {
+		width: 100%;
 	}
 }
 
@@ -362,6 +378,9 @@
 
 .stat-block {
 	margin: 0 0 30px 0;
+	h3 {
+		margin: 0 0 10px 0;
+	}
 	&.online-list {
 		margin: 40px 0 30px 0;
 	}
