Minor changes and add wrapper for viewtopic

--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_footer.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_footer.scss
@@ -3,6 +3,7 @@
 
 #page-footer {
 	background: url($images + 'footer-background.png') center -30px repeat-x;
+	margin: 40px 0 0 0;
 	padding: 150px 0 0 0;
 	.footer-inner {
 		background: $color-04;
