--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_form-fields.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_form-fields.scss
@@ -14,6 +14,9 @@ fieldset {
 	padding: 0;
 	margin: 0;
 	border: 0;
+	&.submit-buttons {
+		margin: 0 0 20px 0;
+	}
 }
 
 .inputbox, select, .button, .button1, .button2 {	
