--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/stylesheet.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/stylesheet.scss
@@ -23,6 +23,7 @@
 // @import 'vendors';
 @import 'layout';
 @import 'topiclist';
+@import 'viewtopic';
 @import 'header';
 @import 'footer';
 // @import 'responsive';
