--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_layout.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_layout.scss
@@ -69,9 +69,9 @@
 		opacity: 0;
 		@include transition(opacity 0.5s ease-in-out);
 		display: block !important;
-		min-width: 150px;
+		min-width: 160px;
 		position: absolute;
-		top: 3em;
+		top: em(50px);
 		left: 0;
 		z-index: -1;
 		margin: 0 !important;
@@ -107,7 +107,7 @@
  	}
 	&.dropdown-up .dropdown {
 		top: auto;
-		bottom: 3em;
+		bottom: em(50px);
 	} 	
 	&.dropdown-left .dropdown {
 		left: auto;
@@ -164,7 +164,7 @@
 /* Main Boxes (Inner)
 ========================================================================== */
 
-#page-welcome, #featured-content, .forabg, .forumbg, .panel, .post {
+#page-welcome, #featured-content, .forabg, .forumbg, .panel {
 	.inner {
 		padding: 20px 20px 0 20px;
 		background: rgba($color-02, 0.20);
@@ -175,7 +175,7 @@
 
 #page-welcome, #featured-content, .forabg, .panel {
 	.inner {
-		margin: 0 0 30px 0;
+		margin: 0 0 40px 0;
 	}
 }
 
@@ -235,16 +235,13 @@
 	align-items: center;
 	& > * {
 		margin: 0 10px 0 0;
-	}
-	&.compact .mark-read {
-		margin: 0 0 0 auto;
-	}
+	}	
 	&.bar-top .search-box {
 		flex: 0 0 300px;
 	}
 	&.bar-top, &.bar-bottom {
 		.pagination {
-			margin: 0 -5px 0 auto
+			margin: 0 0 0 auto
 		}
 	}
 	&.actions-jump {		
