--- a/khyeras/_dev/styles/khyeras_v1/template/viewtopic_body.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/viewtopic_body.html
@@ -130,7 +130,7 @@
 
 <!-- EVENT viewtopic_body_poll_after -->
 
-<div class="panel">
+<div class="panel viewtopic">
 	<div class="inner">
 
 		<!-- BEGIN postrow -->
@@ -138,7 +138,7 @@
 			<!-- IF postrow.S_FIRST_UNREAD -->
 				<a id="unread" class="anchor"<!-- IF S_UNREAD_VIEW --> data-url="{postrow.U_MINI_POST}"<!-- ENDIF -->></a>
 			<!-- ENDIF -->
-			<div id="p{postrow.POST_ID}" class="post has-profile <!-- IF postrow.S_ROW_COUNT is odd -->bg1<!-- ELSE -->bg2<!-- ENDIF --><!-- IF postrow.S_UNREAD_POST --> unreadpost<!-- ENDIF --><!-- IF postrow.S_POST_REPORTED --> reported<!-- ENDIF --><!-- IF postrow.S_POST_DELETED --> deleted<!-- ENDIF --><!-- IF postrow.S_ONLINE and not postrow.S_POST_HIDDEN --> online<!-- ENDIF --><!-- IF postrow.POSTER_WARNINGS --> warned<!-- ENDIF -->">
+			<div id="p{postrow.POST_ID}" class="post has-profile <!-- IF postrow.S_ROW_COUNT is odd -->bg1<!-- ELSE -->bg2<!-- ENDIF --><!-- IF postrow.S_UNREAD_POST --> unreadpost<!-- ENDIF --><!-- IF postrow.S_POST_REPORTED --> reported<!-- ENDIF --><!-- IF postrow.S_POST_DELETED --> deleted<!-- ENDIF --><!-- IF postrow.S_ONLINE and not postrow.S_POST_HIDDEN --> online<!-- ENDIF --><!-- IF postrow.POSTER_WARNINGS --> warned<!-- ENDIF --><!-- IF postrow.S_FIRST_ROW --> first<!-- ENDIF --><!-- IF postrow.S_LAST_ROW --> last<!-- ENDIF -->">
 				<div class="inner">
 
 				<dl class="postprofile" id="profile{postrow.POST_ID}"<!-- IF postrow.S_POST_HIDDEN --> style="display: none;"<!-- ENDIF -->>
