--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_variables.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_variables.scss
@@ -19,8 +19,8 @@ $color-08: #333333; // blackish
 $color-09: #fcfcce; // pale yellow
 $color-10: #1c2f25; // dark green
 $color-11: #d31141; // red
-$color-12: #666666; // gray
-$color-13: #999999; // gray
+$color-12: #777777; // gray
+$color-13: #aaaaaa; // gray
 $color-14: #15221b; // darker green
 
 /* Fonts
