--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_mixins.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_mixins.scss
@@ -125,3 +125,12 @@
 	-o-transition: $value;	
 	transition: $value;
 }
+
+// Quote characters
+
+@mixin quotes {
+	font-size: rem(30px);	
+	@include inline-block(middle);
+	@include sizing(12px, 12px);
+	line-height: 1.2;	
+}
