--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_prosilver.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_prosilver.scss
@@ -362,31 +362,6 @@ dd.option {
 /* Post body styles
 ----------------------------------------*/
 
-.postbody h3 {
-	/* Postbody requires a different h3 format - so change it here */
-	float: left;
-	padding: 2px 0 0 0;
-	margin-top: 0 !important;
-	margin-bottom: 0.3em !important;
-	text-transform: none;
-	border: none;
-	line-height: 125%;
-}
-
-.postbody h3 img {
-	vertical-align: bottom;
-}
-
-.has-profile .postbody h3 {
-	/* If there is a post-profile, we position the post-buttons differently */
-	float: none !important;
-	margin-right: 180px;
-}
-
-.postbody .content {
-	overflow-x: auto;
-}
-
 .postbody img.postimage {
 	max-width: 100%;
 	-webkit-box-sizing: border-box;
@@ -515,41 +490,6 @@ ul.searchresults {
 
 /* BB Code styles
 ----------------------------------------*/
-/* Quote block */
-blockquote {
-	background: transparent none 6px 8px no-repeat;
-	border: 1px solid transparent;
-	margin: 1em 1px 1em 25px;
-	overflow: hidden;
-	padding: 5px;
-}
-
-blockquote blockquote {
-	/* Nested quotes */
-	margin: 1em 1px 1em 15px;
-}
-
-blockquote cite {
-	/* Username/source of quoter */
-	font-style: normal;
-	font-weight: bold;
-	margin-left: 20px;
-	display: block;
-}
-
-blockquote.uncited {
-	padding-top: 25px;
-}
-
-blockquote cite > div {
-	float: right;
-	font-weight: normal;
-}
-
-.postbody .content li blockquote {
-	overflow: inherit;
-	margin-left: 0;
-}
 
 /* Code block */
 .codebox {
@@ -564,10 +504,6 @@ blockquote cite > div {
 	margin-bottom: 3px;
 	font-weight: bold;
 	display: block;
-}
-
-blockquote .codebox {
-	margin-left: 0;
 }
 
 .codebox code {
@@ -796,37 +732,6 @@ table.fixed-width-table {
 	table-layout: fixed;
 }
 
-
-
-/* Post control buttons
---------------------------------------------- */
-.post-buttons {
-	float: right;
-	list-style: none;
-	margin-top: 2px;
-}
-
-.has-profile .post-buttons {
-	float: none;
-	position: absolute;
-	margin: 0;
-	right: 0;
-	top: 5px;
-}
-
-.post-buttons > li {
-	float: left;
-	margin-right: 3px;
-}
-
-.hastouch .post-buttons {
-	margin-right: 10px;
-}
-
-/* Responsive buttons in post body */
-.hasjs .postbody .post-buttons {
-	max-width: 40%;
-}
 /* Deprecated as of version 3.2
 -------------------------------------------------*/
 .small-icon {
@@ -919,7 +824,7 @@ ul.cplist {
 	padding-bottom: 5px;
 }
 
-.cp-main .postbody h3, .cp-main .box2 h3 {
+.cp-main .box2 h3 {
 	margin-top: 0;
 }
 
@@ -1594,16 +1499,6 @@ input.disabled {
 	.search .postprofile dd {
 		display: block;
 		margin: 0;
-	}
-
-	.has-profile .postbody h3 {
-		margin-left: 0 !important;
-		margin-right: 0 !important;
-	}
-
-	.has-profile .post-buttons {
-		right: 30px;
-		top: 15px;
 	}
 
 	/* Misc stuff
