--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_base.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_base.scss
@@ -42,11 +42,16 @@ pre, code {
 	white-space: normal;
 	display: block;
 	font-family: 'Courier New', monospace;
-	font-size: rem(15px);
-	background: $color-01;	
-	color: $color-08;
-	border: 2px solid $color-04;
+	background: $color-03;	
+	color: $color-01;
+	border: 1px solid $color-04;
 	padding: 20px;
+}
+
+pre code, code pre {
+	padding: 0;
+	margin: 0;
+	border: 0;
 }
 
 blockquote {
